@@ -413,6 +413,21 @@ argument_list|,
 name|_resolveId
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|_cache
+operator|==
+literal|null
+condition|)
+block|{
+name|_cache
+operator|=
+name|settings
+operator|.
+name|getDefaultCache
+argument_list|()
+expr_stmt|;
+block|}
 name|ensureResolved
 argument_list|(
 name|isHaltonfailure
@@ -427,6 +442,8 @@ name|getModule
 argument_list|()
 argument_list|,
 name|_resolveId
+argument_list|,
+name|_cache
 argument_list|)
 expr_stmt|;
 name|_conf
@@ -505,21 +522,6 @@ argument_list|,
 name|_resolveId
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|_cache
-operator|==
-literal|null
-condition|)
-block|{
-name|_cache
-operator|=
-name|settings
-operator|.
-name|getDefaultCache
-argument_list|()
-expr_stmt|;
-block|}
 if|if
 condition|(
 operator|(
