@@ -604,6 +604,21 @@ operator|.
 name|getSettings
 argument_list|()
 decl_stmt|;
+if|if
+condition|(
+name|_cache
+operator|==
+literal|null
+condition|)
+block|{
+name|_cache
+operator|=
+name|settings
+operator|.
+name|getDefaultCache
+argument_list|()
+expr_stmt|;
+block|}
 name|ensureResolved
 argument_list|(
 name|isHaltonfailure
@@ -616,6 +631,8 @@ argument_list|,
 literal|null
 argument_list|,
 name|_resolveId
+argument_list|,
+name|_cache
 argument_list|)
 expr_stmt|;
 name|String
@@ -663,21 +680,6 @@ argument_list|,
 name|_resolveId
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-name|_cache
-operator|==
-literal|null
-condition|)
-block|{
-name|_cache
-operator|=
-name|settings
-operator|.
-name|getDefaultCache
-argument_list|()
-expr_stmt|;
-block|}
 name|_pattern
 operator|=
 name|getProperty
