@@ -349,6 +349,21 @@ argument_list|)
 expr_stmt|;
 if|if
 condition|(
+name|_cache
+operator|==
+literal|null
+condition|)
+block|{
+name|_cache
+operator|=
+name|settings
+operator|.
+name|getDefaultCache
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
 name|isInline
 argument_list|()
 condition|)
@@ -638,6 +653,8 @@ literal|"ivy.resolved.configurations"
 argument_list|)
 argument_list|,
 name|_resolveId
+argument_list|,
+name|_cache
 argument_list|)
 expr_stmt|;
 block|}
@@ -754,21 +771,6 @@ argument_list|(
 literal|"no conf provided for ivy cache task: It can either be set explicitely via the attribute 'conf' or via 'ivy.resolved.configurations' property or a prior call to<resolve/>"
 argument_list|)
 throw|;
-block|}
-if|if
-condition|(
-name|_cache
-operator|==
-literal|null
-condition|)
-block|{
-name|_cache
-operator|=
-name|settings
-operator|.
-name|getDefaultCache
-argument_list|()
-expr_stmt|;
 block|}
 if|if
 condition|(
