@@ -19,6 +19,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|File
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|text
 operator|.
 name|DateFormat
@@ -869,6 +879,9 @@ name|module
 parameter_list|,
 name|String
 name|resolveId
+parameter_list|,
+name|File
+name|cache
 parameter_list|)
 block|{
 name|ensureResolved
@@ -886,6 +899,8 @@ argument_list|,
 literal|null
 argument_list|,
 name|resolveId
+argument_list|,
+name|cache
 argument_list|)
 expr_stmt|;
 block|}
@@ -913,6 +928,9 @@ name|conf
 parameter_list|,
 name|String
 name|resolveId
+parameter_list|,
+name|File
+name|cache
 parameter_list|)
 block|{
 name|ensureMessageInitialised
@@ -976,6 +994,13 @@ argument_list|,
 name|useOrigin
 argument_list|)
 decl_stmt|;
+name|resolve
+operator|.
+name|setCache
+argument_list|(
+name|cache
+argument_list|)
+expr_stmt|;
 name|resolve
 operator|.
 name|setTransitive
