@@ -418,6 +418,58 @@ name|ext
 argument_list|)
 return|;
 block|}
+specifier|private
+name|File
+name|getArchiveFileInCache
+parameter_list|(
+name|String
+name|organisation
+parameter_list|,
+name|String
+name|module
+parameter_list|,
+name|String
+name|revision
+parameter_list|,
+name|String
+name|artifact
+parameter_list|,
+name|String
+name|type
+parameter_list|,
+name|String
+name|ext
+parameter_list|,
+name|File
+name|cache
+parameter_list|)
+block|{
+return|return
+name|TestHelper
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_fileset
+operator|.
+name|getIvyInstance
+argument_list|()
+argument_list|,
+name|cache
+argument_list|,
+name|organisation
+argument_list|,
+name|module
+argument_list|,
+name|revision
+argument_list|,
+name|artifact
+argument_list|,
+name|type
+argument_list|,
+name|ext
+argument_list|)
+return|;
+block|}
 specifier|public
 name|void
 name|testEmptyConf
@@ -599,6 +651,182 @@ name|fail
 argument_list|(
 literal|"failure raised an exception with haltonfailure set to false"
 argument_list|)
+expr_stmt|;
+block|}
+block|}
+specifier|public
+name|void
+name|testWithoutPreviousResolveAndNonDefaultCache
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|File
+name|cache2
+init|=
+operator|new
+name|File
+argument_list|(
+literal|"build/cache2"
+argument_list|)
+decl_stmt|;
+name|cache2
+operator|.
+name|mkdirs
+argument_list|()
+expr_stmt|;
+try|try
+block|{
+name|_project
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.dep.file"
+argument_list|,
+literal|"test/java/org/apache/ivy/ant/ivy-simple.xml"
+argument_list|)
+expr_stmt|;
+name|_fileset
+operator|.
+name|setSetid
+argument_list|(
+literal|"simple-setid"
+argument_list|)
+expr_stmt|;
+name|_fileset
+operator|.
+name|setCache
+argument_list|(
+name|cache2
+argument_list|)
+expr_stmt|;
+name|_fileset
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|Object
+name|ref
+init|=
+name|_project
+operator|.
+name|getReference
+argument_list|(
+literal|"simple-setid"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|ref
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|ref
+operator|instanceof
+name|FileSet
+argument_list|)
+expr_stmt|;
+name|FileSet
+name|fs
+init|=
+operator|(
+name|FileSet
+operator|)
+name|ref
+decl_stmt|;
+name|DirectoryScanner
+name|directoryScanner
+init|=
+name|fs
+operator|.
+name|getDirectoryScanner
+argument_list|(
+name|_project
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|directoryScanner
+operator|.
+name|getIncludedFiles
+argument_list|()
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.0"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|,
+name|cache2
+argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|,
+operator|new
+name|File
+argument_list|(
+literal|"build/cache2/"
+operator|+
+name|directoryScanner
+operator|.
+name|getIncludedFiles
+argument_list|()
+index|[
+literal|0
+index|]
+argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|Delete
+name|del
+init|=
+operator|new
+name|Delete
+argument_list|()
+decl_stmt|;
+name|del
+operator|.
+name|setProject
+argument_list|(
+operator|new
+name|Project
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|del
+operator|.
+name|setDir
+argument_list|(
+name|cache2
+argument_list|)
+expr_stmt|;
+name|del
+operator|.
+name|execute
+argument_list|()
 expr_stmt|;
 block|}
 block|}
